<resources>
    <string name="app_name">BaseMatch</string>
    <string name="launch_massage">野球しようよ！</string>

    <string name="option_player">Player</string>
    <string name="option_team">Team</string>
    <string name="description">BaseMatchとは</string>

    <string name="player_login">Playerログイン</string>
    <string name="player_registration">Player新規登録</string>
    <string name="team_login">Teamログイン</string>
    <string name="team_registration">Team新規登録</string>

</resources>